<resources>
    <string name="app_name">Cheflim</string>
    <string name="default_content">.</string>
    <string name="lista_compras">Mi Lista de compras</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="buscar_receta">Buscar Receta</string>
    <string name="nombre_real">Nombre Real:</string>
    <string name="nombre_de_usuario">Nombre de Usuario:</string>
    <string name="correo">Correo:</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="editar_contrase_a">Editar Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="correo_crear">Correo</string>
    <string name="nombre_completo_crear">Nombre Completo</string>
    <string name="nombre_de_usuario_crear">Nombre de Usuario</string>
    <string name="contrase_crear">Contraseña</string>
    <string name="repita_su_contrase_crear">Repita su Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="porciones">porciones</string>
    <string name="mins">mins</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="instrucciones">Instrucciones:</string>
    <string name="contrase_inicio">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crea_una_cuenta">Crea una</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="mi_nueva_receta">Mi Nueva Receta</string>
    <string name="lista_de_ingredientes_crear">LISTA DE INGREDIENTES</string>
    <string name="email_inicio">Correo</string>
    <string name="mensaje_campo_vacio">No se puede dejar el campo vacío!!!</string>
    <string name="bienvenido_mensaje">Bienvenido</string>
    <string name="usuario_no_encontrado">Usuario no encontrado</string>
    <string name="error_comunicacion_servidor">Error al comunicarse con el servidor</string>
    <string name="llena_campos">Llena todos los campos!</string>
    <string name="error_obtener_datos">Error al obtener datos</string>
    <string name="fallo_conexion">Fallo en la conexión</string>
    <string name="campo_vacio">No se puede dejar el campo vacío!!!</string>
    <string name="no_puede_subir_mas">No se puede subir más</string>
    <string name="no_puede_bajar_mas">No se puede bajar más</string>
    <string name="valores_permitidos">Ingrese valores permitidos en los campos de Porciones y Tiempo</string>
    <string name="valores_validos">Ingrese valores válidos</string>
    <string name="nombre_receta_vacio">No puedes dejar en blanco el nombre de la receta</string>
    <string name="ingrediente_vacio">Debe existir al menos un ingrediente</string>
    <string name="paso_vacio">Debe existir al menos un paso</string>
    <string name="subir_imagen">Suba una imagen para su receta!</string>
    <string name="error_subir_imagen">Error al subir la imagen</string>
    <string name="fallo_internet">Fallo de internet</string>
    <string name="imagen_subida_exitosa">Imagen subida exitosamente</string>
    <string name="fallo_subir_imagen">Fallo al subir la imagen</string>
    <string name="receta_editada_exitosamente">Receta editada exitosamente</string>
    <string name="error_subir_receta">Error al subir la receta</string>
    <string name="no_deberias_estar_aqui">No deberías estar aquí!</string>
    <string name="item_eliminado_correctamente">Item eliminado correctamente</string>
    <string name="no_deje_campos_vacios">No deje campos vacíos!!!</string>
    <string name="datos_editados_exito">Datos editados con éxito</string>
    <string name="error_servidor">Error del servidor</string>
    <string name="ingrese_nueva_contrasena">Ingrese su nueva contraseña!!!</string>
    <string name="contraseña_editada_exito">Contraseña editada con éxito</string>
    <string name="error_al_eliminar_la_receta">Error al eliminar la receta</string>
    <string name="error_de_conexion">Error de conexión</string>
    <string name="usuario_correo_existente">Usuario o Correo ya existentes!!!</string>
    <string name="repita_correctamente_contrasena">Repita correctamente su contraseña!!!</string>
    <string name="usuario_creado_correctamente">Usuario creado correctamente!!!</string>
    <string name="error_crear_usuario">Error al crear el usuario...</string>
    <string name="fallo_comunicarse_servidor">Fallo al comunicarse con el servidor!!!</string>
    <string name="lista_anadida_exitosa">Lista añadida con exito</string>
    <string name="error_guardado">Error dentro del guardado</string>
    <string name="error_comunicacion_api">Error al comunicarse a la API</string>
    <string name="agrega_ingrediente">Agregar un ingrediente</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="titulo_agrega_paso">Agrega un Paso</string>
    <string name="edita_ingrediente">Edita el ingrediente</string>
    <string name="borrar_ingrediente">Borrar el ingrediente</string>
    <string name="borrar">Borrar</string>
    <string name="edita_el_paso">Edita el paso</string>
    <string name="editar">Editar</string>
    <string name="salir_editor_recetas">Salir del editor de recetas</string>
    <string name="mensaje_salir_editor">Se perderán los datos, desea salir?</string>
    <string name="boton_salir">Salir</string>
    <string name="error_message">Ha ocurrido un error.</string>
    <string name="respuesta_fallida">Respuesta fallida: </string>
    <string name="porciones_label">Porciones</string>
    <string name="minutos_label">Minutos</string>
    <string name="confirmar_eliminacion">Confirmar eliminación</string>
    <string name="confirmar_eliminar_item">¿Desea eliminar este Item de lista?</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_llamada_api">Error en la llamada a la API: %s</string>
    <string name="correo_label">Correo</string>
    <string name="contrasena_label">Contraseña</string>
    <string name="usuario_label">Usuario</string>
    <string name="nombre_label">Nombre</string>
    <string name="id_usuario_key">id_usuario</string>
    <string name="cerrar_sesion">Cerrar la sesión</string>
    <string name="confirmar_salir_cuenta">Desea salir de esta cuenta?</string>
    <string name="agregar_a_la_lista">Agregar a la lista</string>
    <string name="lista_de_pasos">LISTA DE PASOS</string>
    <string name="imagen_de_la_receta">Imagen de la receta</string>
    <string name="cantidad_de_porciones">Cantidad de Porciones</string>
    <string name="tiempo_de_preparaci_n">Tiempo de preparación</string>
    <string name="guardar_receta">Guardar Receta</string>
    <string name="res">Reseña</string>
    <string name="ingrese_el_text">Ingrese el texto</string>


</resources>