<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive"
    android:orientation="vertical"
    tools:context=".CrudRecetas">

    <!-- Header Layout -->
    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp">


            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center|start"
                android:backgroundTint="@color/none"
                android:contentDescription="@string/default_content"
                android:paddingStart="5dp"
                android:paddingBottom="24dp"
                android:src="@drawable/back"
                android:onClick="Salirdeaqui"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:paddingBottom="10dp">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_receta"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/NombreReceta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittextredondo"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mi_nueva_receta"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/orange_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/MisIngredientes"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/default_content"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ingredientes"
            android:onClick="CambiarIngre"/>

        <ImageButton
            android:id="@+id/Misprocedimientos"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/none"
            android:contentDescription="@string/default_content"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/procedimientos"
            android:onClick="CambiarProce"/>

        <ImageButton
            android:id="@+id/MisDatos"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/none"
            android:contentDescription="@string/default_content"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/multimedia"
            android:onClick="CambiarDato"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ingredients_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/ingredients_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/lista_de_ingredientes_crear"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add_ingredient_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/none"
                android:contentDescription="@string/default_content"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/add"
                android:onClick="AddIng"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/LayoutCartaIngres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/procedures_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/procedures_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/lista_de_pasos"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add_procedures_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/none"
                android:contentDescription="@string/default_content"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/add"
                android:onClick="AddPas"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/LayoutCartaProces"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/informa_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="0dp">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/LayoutCartaInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/imagen_de_la_receta"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ImagenSubida"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/imgtemplate"
                            android:padding="0dp"/>

                        <ImageButton
                            android:id="@+id/uploadimage_button"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="end|bottom"
                            android:backgroundTint="@color/none"
                            android:contentDescription="@string/default_content"
                            android:padding="0dp"
                            android:layout_marginEnd="45dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/upload"
                            android:onClick="Upimage"/>

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>


                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cantidad_de_porciones"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/infoporcione"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittextredondo"
                    android:layout_margin="16dp"
                    android:textSize="20sp"
                    android:hint="#"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:digits="0123456789" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tiempo_de_preparaci_n"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">
                    <EditText
                        android:id="@+id/infotiempo"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittextredondo"
                        android:layout_margin="0dp"
                        android:hint="#"
                        android:textColor="@color/black"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:inputType="number"
                        android:digits="0123456789" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mins"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <Button
                    android:id="@+id/GuardarRECETA"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:layout_margin="16dp"
                    android:text="@string/guardar_receta"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:onClick="GuarEdit"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
